@@ -1,5 +1,4 @@
 <html> <head> <title>libgcj -vs- Classpath (No GUI Classes)</title>
-<link rel="stylesheet" type="text/css" href="http://gcc.gnu.org/gcc.css"></link>
 </head> <body> <h1>libgcj -vs- Classpath (No GUI Classes)</h1>
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
