@@ -178,7 +178,7 @@ integrating the required gcj patches in the near future.
 <dt>July 31, 2003</dt>
 <dd>
 Andrew Haley has checked in a major patch to the
-<a href="http://gcc.gnu.org/projects/tree-ssa/">tree-ssa branch</a>
+<a href="../projects/tree-ssa/">tree-ssa branch</a>
 that allows us to convert entire functions to trees when reading
 from <code>.class</code> files.  This is an important step towards
 better high-level optimizations for Java.
@@ -202,7 +202,7 @@ proof-of-concept.
 
 <dt>May 14, 2003</dt>
 <dd>
-<a href="http://gcc.gnu.org/gcc-3.3/">GCC 3.3 has been released</a>.
+<a href="../gcc-3.3/">GCC 3.3 has been released</a>.
 This release includes many bug fixes, support for <code>assert</code>,
 and JDBC 3.0 support in <code>java.sql</code>
 and <code>javax.sql</code>, among other things.
@@ -477,9 +477,9 @@ and use it as a replacement to zip.  </dd>
 <dt>December 8, 2000</dt>
 <dd>
 The libgcj repository is now <a href="https://gcc.gnu.org/ml/java/2000-12/msg00095.html">
-closed</a>: We're moving our sources over to the gcc
+closed</a>: We're moving our sources over to the GCC
 <a href="https://gcc.gnu.org/ml/java-announce/2000/msg00003.html">
-tree</a>. Read <a href="http://gcc.gnu.org/svn.html">here</a>
+tree</a>. Read <a href="../svn.html">here</a>
 how you will soon check your sources out.
 </dd>
 
