@@ -93,10 +93,10 @@ href="http://www.gnu.org/software/gnu-crypto/">GNU Crypto</a>.</dd>
 </dl>
 
 <p>You can also see <a
-href="http://gcc.gnu.org/java/libgcj-classpath-compare.html">a
+href="libgcj-classpath-compare.html">a
 comparison of our classes with Classpath's</a>.  Differences here are
 merged from time to time.  You can also see
-<a href="http://gcc.gnu.org/java/gui-compare/libgcj-classpath-compare.html">
+<a href="gui-compare/libgcj-classpath-compare.html">
 a comparison of the GUI branch with Classpath</a>.
 </p>
 
