@@ -1,3 +1,11 @@
+2014-07-02  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* news.html: Make a number of links relative.
+	* status.html: Ditto.
+
+	* libgcj-classpath-compare.html: Remove redundant link to gcc.css.
+	* gui-compare/libgcj-classpath-compare.html: Ditto.
+
 2014-07-01  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* .htaccess: Merge java/.htaccess into top level .htaccess 
